--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,8 @@ unbind %
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
 
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
 # Change size of the pane
 
 bind-key H resize-pane -L 30
